--- a/debian/control
+++ b/debian/control
@@ -14,7 +14,7 @@ Build-Depends: debhelper (>= 9),
                python3-setuptools
 Build-Depends-Indep: python-coverage (>= 3.6),
                      python-fixtures (>= 0.3.14),
-                     python-hacking (>= 0.9.2),
+                     python-hacking,
                      python-httpretty (>= 0.8.0),
                      python-mock (>= 1.0),
                      python-oslo.utils (>= 1.2.0),
