export OSLO_PACKAGE_VERSION=$(VERSION)

--- a/debian/rules
+++ b/debian/rules
@@ -6,6 +6,8 @@ PYTHON3S:=$(shell py3versions -vr)
 UPSTREAM_GIT = git://github.com/<please-user>/python-openstacksdk.git
 -include /usr/share/openstack-pkg-tools/pkgos.make
 
+export OSLO_PACKAGE_VERSION=$(VERSION)
+
 %:
 	dh $@ --buildsystem=python_distutils --with python2,python3,sphinxdoc
 
