--- a/debian/rules
+++ b/debian/rules
@@ -43,7 +43,7 @@ override_dh_clean:
 	rm -rf build
 
 override_dh_sphinxdoc:
-	sphinx-build -b html doc debian/python-openstacksdk-doc/usr/share/doc/python-openstacksdk-doc/html
+	sphinx-build -b html doc/source debian/python-openstacksdk-doc/usr/share/doc/python-openstacksdk-doc/html
 	dh_sphinxdoc -O--buildsystem=python_distutils
 
 # Commands not to run
