--- a/debian/rules
+++ b/debian/rules
@@ -3,8 +3,8 @@
 PYTHONS:=$(shell pyversions -vr)
 PYTHON3S:=$(shell py3versions -vr)
 
-UPSTREAM_GIT = git://github.com/<please-user>/python-openstacksdk.git
--include /usr/share/openstack-pkg-tools/pkgos.make
+UPSTREAM_GIT = git://github.com/stackforge/python-openstacksdk.git
+include /usr/share/openstack-pkg-tools/pkgos.make
 
 export OSLO_PACKAGE_VERSION=$(VERSION)
 
