--- a/debian/control
+++ b/debian/control
@@ -6,36 +6,42 @@ Uploaders: Thomas Goirand <zigo@debian.org>
 Build-Depends: debhelper (>= 9),
                dh-python,
                openstack-pkg-tools,
-               python-all (>= 2.6.6-3~),
-               python-pbr,
+               python-all,
+               python-pbr (>= 1.8),
                python-setuptools,
                python-sphinx,
                python3-all,
-               python3-pbr,
+               python3-pbr (>= 1.8),
                python3-setuptools
 Build-Depends-Indep: python-coverage (>= 3.6),
-                     python-fixtures (>= 0.3.14),
+                     python-fixtures (>= 1.3.1),
                      python-hacking,
-                     python-httpretty (>= 0.8.0),
-                     python-mock (>= 1.0),
-                     python-oslo.utils (>= 1.2.0),
-                     python-oslosphinx (>= 2.2.0),
-                     python-requests (>= 2.2.0),
-                     python-six (>= 1.7.0),
-                     python-stevedore (>= 1.1.0),
+                     python-mock (>= 1.3),
+                     python-os-client-config (>= 1.6.0),
+                     python-os-testr (>= 0.4.1),
+                     python-oslo.utils (>= 3.0.0),
+                     python-oslosphinx (>= 2.5.0),
+                     python-requests (>= 2.5.2),
+                     python-requests-mock (>= 0.6.0),
+                     python-six (>= 1.9.0),
+                     python-stevedore (>= 1.5.0),
                      python-testscenarios (>= 0.4),
-                     python-testtools (>= 0.9.36),
+                     python-testtools (>= 1.4.0),
                      python3-fixtures (>= 0.3.14),
                      python3-httpretty (>= 0.8.0),
                      python3-mock (>= 1.0),
-                     python3-oslo.utils (>= 1.2.0),
-                     python3-requests (>= 2.2.0),
-                     python3-six (>= 1.7.0),
-                     python3-stevedore (>= 1.1.0),
+                     python3-os-client-config (>= 1.6.0),
+                     python3-os-testr (>= 0.4.1),
+                     python3-oslo.utils (>= 3.0.0),
+                     python3-requests (>= 2.5.2),
+                     python3-requests-mock (>= 0.6.0),
+                     python3-six (>= 1.9.0),
+                     python3-stevedore (>= 1.5.0),
                      python3-testscenarios (>= 0.4),
-                     python3-testtools (>= 0.9.36),
-                     subunit (>= 0.0.18),
-                     testrepository (>= 0.0.18)
+                     python3-testtools (>= 1.4.0),
+                     python3-subunit,
+                     subunit,
+                     testrepository
 Standards-Version: 3.9.6
 Vcs-Browser: http://anonscm.debian.org/gitweb/?p=openstack/python-openstacksdk.git
 Vcs-Git: git://anonscm.debian.org/openstack/python-openstacksdk.git
@@ -43,12 +49,13 @@ Homepage: https://github.com/stackforge/python-openstacksdk
 
 Package: python-openstacksdk
 Architecture: all
-Pre-Depends: dpkg (>= 1.15.6~)
-Depends: python-oslo.utils (>= 1.2.0),
-         python-pbr (>= 0.6),
-         python-requests (>= 2.2.0),
-         python-six (>= 1.7.0),
-         python-stevedore (>= 1.1.0),
+Depends: python-keystoneauth1 (>= 1.1.0),
+         python-os-client-config (>= 1.6.0),
+         python-oslo.utils (>= 3.0.0),
+         python-pbr (>= 1.8),
+         python-requests (>= 2.5.2),
+         python-six (>= 1.9.0),
+         python-stevedore (>= 1.5.0),
          ${misc:Depends},
          ${python:Depends}
 Suggests: python-openstacksdk-doc
@@ -66,12 +73,13 @@ Description: SDK for building applications to work with OpenStack - Python 2.x
 
 Package: python3-openstacksdk
 Architecture: all
-Pre-Depends: dpkg (>= 1.15.6~)
-Depends: python3-oslo.utils (>= 1.2.0),
-         python3-pbr (>= 0.6),
-         python3-requests (>= 2.2.0),
-         python3-six (>= 1.7.0),
-         python3-stevedore (>= 1.1.0),
+Depends: python3-keystoneauth1 (>= 1.1.0),
+         python3-os-client-config (>= 1.6.0),
+         python3-oslo.utils (>= 3.0.0),
+         python3-pbr (>= 1.8),
+         python3-requests (>= 2.5.2),
+         python3-six (>= 1.9.0),
+         python3-stevedore (>= 1.5.0),
          ${misc:Depends},
          ${python3:Depends}
 Suggests: python-openstacksdk-doc
@@ -90,7 +98,6 @@ Description: SDK for building applications to work with OpenStack - Python 3.x
 Package: python-openstacksdk-doc
 Section: doc
 Architecture: all
-Pre-Depends: dpkg (>= 1.15.6~)
 Depends: ${misc:Depends}, ${sphinxdoc:Depends}
 Description: SDK for building applications to work with OpenStack - doc
  The python-openstacksdk is a collection of libraries for building applications
