--- a/debian/gbp.conf
+++ b/debian/gbp.conf
@@ -4,6 +4,6 @@ debian-branch = debian/mitaka
 upstream-tag = %(version)s
 compression = xz
 
-[git-buildpackage]
+[buildpackage]
 export-dir = ../build-area/
 
