--- a/debian/control
+++ b/debian/control
@@ -16,6 +16,7 @@ Build-Depends: debhelper (>= 9),
 Build-Depends-Indep: python-coverage (>= 3.6),
                      python-fixtures (>= 1.3.1),
                      python-hacking,
+                     python-keystoneauth1 (>= 1.1.0),
                      python-mock (>= 1.3),
                      python-os-client-config (>= 1.6.0),
                      python-os-testr (>= 0.4.1),
@@ -29,6 +30,7 @@ Build-Depends-Indep: python-coverage (>= 3.6),
                      python-testtools (>= 1.4.0),
                      python3-fixtures (>= 0.3.14),
                      python3-httpretty (>= 0.8.0),
+                     python3-keystoneauth1 (>= 1.1.0),
                      python3-mock (>= 1.0),
                      python3-os-client-config (>= 1.6.0),
                      python3-os-testr (>= 0.4.1),
