--- a/debian/control
+++ b/debian/control
@@ -16,12 +16,12 @@ Build-Depends: debhelper (>= 9),
 Build-Depends-Indep: python-coverage (>= 3.6),
                      python-fixtures (>= 1.3.1),
                      python-hacking,
+                     python-iso8601 (>= 0.1.9),
                      python-keystoneauth1 (>= 2.1.0),
                      python-mock (>= 1.3),
                      python-os-client-config (>= 1.13.1),
                      python-os-testr (>= 0.4.1),
                      python-oslo.utils (>= 3.4.0),
-                     python-oslosphinx (>= 2.5.0),
                      python-openstackdocstheme (>= 1.0.3),
                      python-requests (>= 2.5.2),
                      python-requests-mock (>= 0.6.0),
@@ -30,7 +30,8 @@ Build-Depends-Indep: python-coverage (>= 3.6),
                      python-testscenarios (>= 0.4),
                      python-testtools (>= 1.4.0),
                      python3-fixtures (>= 0.3.14),
-                     python3-httpretty (>= 0.8.0),
+                     python3-hacking,
+                     python3-iso8601 (>= 0.1.9),
                      python3-keystoneauth1 (>= 2.1.0),
                      python3-mock (>= 1.0),
                      python3-os-client-config (>= 1.13.1),
