--- a/debian/control
+++ b/debian/control
@@ -13,7 +13,8 @@ Build-Depends: debhelper (>= 9),
                python3-all,
                python3-pbr (>= 1.8),
                python3-setuptools
-Build-Depends-Indep: python-coverage (>= 3.6),
+Build-Depends-Indep: git,
+                     python-coverage (>= 3.6),
                      python-fixtures (>= 1.3.1),
                      python-hacking,
                      python-iso8601 (>= 0.1.9),
