d/control: Add python-oslosphinx to build-depends.

--- a/debian/control
+++ b/debian/control
@@ -23,6 +23,7 @@ Build-Depends-Indep: git,
                      python-os-client-config (>= 1.13.1),
                      python-os-testr (>= 0.4.1),
                      python-oslo.utils (>= 3.4.0),
+                     python-oslosphinx (>= 2.5.0),
                      python-openstackdocstheme (>= 1.0.3),
                      python-requests (>= 2.5.2),
                      python-requests-mock (>= 0.6.0),
