--- a/debian/control
+++ b/debian/control
@@ -50,8 +50,8 @@ Build-Depends-Indep: git,
                      subunit,
                      testrepository
 Standards-Version: 3.9.6
-Vcs-Browser: http://anonscm.debian.org/gitweb/?p=openstack/python-openstacksdk.git
-Vcs-Git: git://anonscm.debian.org/openstack/python-openstacksdk.git
+Vcs-Browser: https://anonscm.debian.org/cgit/openstack/python-openstacksdk.git/
+Vcs-Git: https://anonscm.debian.org/git/openstack/python-openstacksdk.git
 Homepage: https://github.com/stackforge/python-openstacksdk
 
 Package: python-openstacksdk
